# agent_template

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  server.py
docs/: setup_enviroment.md
notebooks/: draw_graph.ipynb  test_crawler.ipynb  test_tavils_search.ipynb
src/: workflow.py
src/agents/: __init__.py  agents.py
src/config/: agents.py  configuration.py  report_style.py  tools.py
src/crawler/: crawler.py
src/graph/: builder.py  types.py
src/graph/nodes/: __init__.py  background_investigation.py  coder.py  coordinator.py  human_feedback.py  planner.py  reporter.py  research_team.py  researcher.py  utils.py
src/llms/: __init__.py  llm.py
src/podcast/: types.py
src/podcast/graph/: builder.py  script_writer_node.py  state.py  tts_node.py
src/prompts/: template.py
src/prompts/models/: __init__.py
src/server/: app.py  chat_request.py
src/tools/: __init__.py  crawler.py  handoff.py  python_repl.py  search.py
src/tools/tavily_search/: tavily_search_api_wrapper.py
src/utils/: json_utils.py
tts/: __init__.py  readme.md  text_to_speech_api.proto  text_to_speech_api_pb2.py  text_to_speech_api_pb2_grpc.py  tts_client.py  tts_server.py
