[project]
name = "learn-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "coverage>=7.9.1",
    "fastapi[standard]>=0.115.13",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "jinja2>=3.1.6",
    "json-repair>=0.47.1",
    "langchain-community>=0.3.25",
    "langchain-experimental>=0.3.4",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.24",
    "langgraph>=0.4.8",
    "loguru>=0.7.3",
    "markdownify>=1.1.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "readabilipy>=0.3.0",
]
